[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/wizard_editor/wizard_editor_nodes/wizard_editor_node_section.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_128_info_circle.svg" type="Texture" id=2]

[node name="StepSection" type="GraphNode"]
margin_right = 225.0
margin_bottom = 81.0
mouse_filter = 1
title = "New Section"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="."]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 102.0
margin_top = 34.0
margin_right = 123.0
margin_bottom = 55.0
rect_min_size = Vector2( 21, 21 )
size_flags_horizontal = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="StepLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 59.0
margin_right = 217.0
margin_bottom = 80.0
text = "Section id:"

[node name="TextEdit" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 84.0
margin_right = 217.0
margin_bottom = 117.0

[node name="SectionTitleLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 121.0
margin_right = 217.0
margin_bottom = 142.0
text = "Section title:"

[node name="SectionTitleTextEdit" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 146.0
margin_right = 217.0
margin_bottom = 179.0

[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="SectionTitleTextEdit" to="." method="_on_SectionTitleTextEdit_text_changed"]
